--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = atmelsam
 board = mkrwifi1010
 framework = arduino
+lib_deps = 
+	arduino-libraries/WiFiNINA@^1.8.13
+	arduino-libraries/ArduinoIoTCloud@^1.3.1
+	arduino-libraries/Arduino_ConnectionHandler@^0.6.5
+	knolleary/PubSubClient@^2.8
