--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	arduino-libraries/ArduinoIoTCloud@^1.3.1
 	arduino-libraries/Arduino_ConnectionHandler@^0.6.5
 	knolleary/PubSubClient@^2.8
+	tzapu/WiFiManager@^0.16.0
