--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	arduino-libraries/WiFiNINA@^1.8.13
 	knolleary/PubSubClient@^2.8
+	adafruit/Adafruit LiquidCrystal@^1.1.0
