--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,5 @@ framework = arduino
 lib_deps = 
 	arduino-libraries/WiFiNINA@^1.8.13
 	knolleary/PubSubClient@^2.8
-	adafruit/Adafruit LiquidCrystal@^1.1.0
+	;adafruit/Adafruit LiquidCrystal@^1.1.0
+	arduino-libraries/LiquidCrystal@^1.0.7
